# opencv_candidate

./: package.xml
include/opencv_creative/: reader.h
launch/: softkinetic_camera_simple.launch
src/: CMakeLists.txt
src/creative/: CMakeLists.txt  creative.cpp  main.cpp
