<package>
  <name>opencv_candidate</name>
  <version>0.2.4</version>
  <description>Experimental OpenCV functions</description>
  <author email="erublee@willowgarage.com">Ethan Rublee</author>
  <author email="vrabud@willowgarage.com">Vincent Rabaud</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url>https://github.com/wg-perception/opencv_candidate</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>
</package>
